# docs/swagger.json
@@ -11,6 +11,235 @@
     },
     "basePath": "/",
     "paths": {
+        "/course": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "course"
+                ],
+                "summary": "获取与当前用户相关的课程(教师创建、学生加入) 需用户登录",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.CourseResp"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "course"
+                ],
+                "summary": "创建课程 需教师登录",
+                "parameters": [
+                    {
+                        "description": "课程信息",
+                        "name": "coursedata",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/course.courseData"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.CourseResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/course/{cid}": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "course"
+                ],
+                "summary": "删除学生,需用户登录，当前用户需要是课程创建者",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Course ID",
+                        "name": "cid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/course/{cid}/student/{uid}": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "course"
+                ],
+                "summary": "删除学生,需用户登录，当前用户有课程管理权限",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Course ID",
+                        "name": "cid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Student ID",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/course/{id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "course"
+                ],
+                "summary": "获取课程信息, 需用户登录，当前用户需要与课程相关",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Course ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.CourseResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/course/{id}/students": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "course"
+                ],
+                "summary": "查看课程学生列表",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Course ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.UserInfoRes"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "course"
+                ],
+                "summary": "导入学生, 需用户登录，当前用户有课程管理权限",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Course ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "学生账号",
+                        "name": "accounts",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/course.studentsData"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/course.studentsData"
+                        }
+                    }
+                }
+            }
+        },
+        "/terms": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "term"
+                ],
+                "summary": "获取学期信息，从用户创建时间到当前时间段 [2,6]春[7,8]夏,[9-1]秋,需用户登录",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.Term"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/email": {
             "post": {
                 "consumes": [
@@ -22,7 +251,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "修改邮箱",
+                "summary": "修改邮箱, 需用户登录",
                 "parameters": [
                     {
                         "description": "新邮箱",
@@ -30,7 +259,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.EmailData"
+                            "$ref": "#/definitions/user.emailData"
                         }
                     }
                 ],
@@ -38,7 +267,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.LoginRes"
+                            "$ref": "#/definitions/user.loginRes"
                         }
                     }
                 }
@@ -52,12 +281,12 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "获取当前用户信息",
+                "summary": "获取当前用户信息，需用户登录",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.UserInfoRes"
+                            "$ref": "#/definitions/entity.UserInfoRes"
                         }
                     }
                 }
@@ -88,7 +317,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.UserInfoRes"
+                            "$ref": "#/definitions/entity.UserInfoRes"
                         }
                     }
                 }
@@ -113,7 +342,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.LoginData"
+                            "$ref": "#/definitions/user.loginData"
                         }
                     }
                 ],
@@ -121,7 +350,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.LoginRes"
+                            "$ref": "#/definitions/user.loginRes"
                         }
                     }
                 }
@@ -138,7 +367,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "修改密码",
+                "summary": "修改密码, 需用户登录",
                 "parameters": [
                     {
                         "description": "新旧密码",
@@ -146,7 +375,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.PasswordData"
+                            "$ref": "#/definitions/user.passwordData"
                         }
                     }
                 ],
@@ -154,10 +383,35 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.LoginRes"
+                            "$ref": "#/definitions/user.loginRes"
                         }
                     }
                 }
+            }
+        },
+        "/user/teacher": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "创建教师账号 需管理员登录",
+                "parameters": [
+                    {
+                        "description": "账号密码必选，邮箱可选",
+                        "name": "logindata",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.registerData"
+                        }
+                    }
+                ]
             }
         },
         "/user/verify": {
@@ -179,7 +433,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.LoginTicketData"
+                            "$ref": "#/definitions/user.loginTicketData"
                         }
                     }
                 ],
@@ -187,7 +441,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.LoginRes"
+                            "$ref": "#/definitions/user.loginRes"
                         }
                     }
                 }
@@ -195,7 +449,89 @@
         }
     },
     "definitions": {
-        "request.EmailData": {
+        "course.courseData": {
+            "type": "object",
+            "properties": {
+                "info": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "season": {
+                    "type": "integer"
+                },
+                "year": {
+                    "type": "integer"
+                }
+            }
+        },
+        "course.studentsData": {
+            "type": "object",
+            "properties": {
+                "accounts": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "names": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "entity.CourseResp": {
+            "type": "object",
+            "properties": {
+                "cid": {
+                    "type": "integer"
+                },
+                "info": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "season": {
+                    "type": "integer"
+                },
+                "year": {
+                    "type": "integer"
+                }
+            }
+        },
+        "entity.Term": {
+            "type": "object",
+            "properties": {
+                "season": {
+                    "type": "integer"
+                },
+                "year": {
+                    "type": "integer"
+                }
+            }
+        },
+        "entity.UserInfoRes": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "integer"
+                }
+            }
+        },
+        "user.emailData": {
             "type": "object",
             "required": [
                 "email"
@@ -206,7 +542,7 @@
                 }
             }
         },
-        "request.LoginData": {
+        "user.loginData": {
             "type": "object",
             "required": [
                 "account",
@@ -221,7 +557,27 @@
                 }
             }
         },
-        "request.LoginTicketData": {
+        "user.loginRes": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "integer"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.loginTicketData": {
             "type": "object",
             "required": [
                 "authorization",
@@ -236,7 +592,7 @@
                 }
             }
         },
-        "request.PasswordData": {
+        "user.passwordData": {
             "type": "object",
             "required": [
                 "new",
@@ -251,34 +607,18 @@
                 }
             }
         },
-        "response.LoginRes": {
+        "user.registerData": {
             "type": "object",
+            "required": [
+                "account",
+                "password"
+            ],
             "properties": {
-                "email": {
+                "account": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
-                "role": {
-                    "type": "integer"
-                },
-                "token": {
+                "password": {
                     "type": "string"
-                }
-            }
-        },
-        "response.UserInfoRes": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "role": {
-                    "type": "integer"
                 }
             }
         }
